Test Org - Speridian/src/objects/BA_Pcp_Obgyn_History__c.object
<CustomObject>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_ProviderName__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Provider Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PCP/OBGYN Histories</relationshipLabel>
        <relationshipName>PCP_OBGYN_Histories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>PCP/OBGYN History</label>
    <nameField>
        <label>PCP/OBGYN History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PCP/OBGYN Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>